[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/entities/stalls/stall.gd" type="Script" id=1]
[ext_resource path="res://src/entities/stalls/components/business_hours.gd" type="Script" id=2]
[ext_resource path="res://src/libraries/state_machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://src/entities/stalls/states/open.gd" type="Script" id=4]
[ext_resource path="res://src/entities/stalls/states/vacant.gd" type="Script" id=5]
[ext_resource path="res://assets/stalls/stall.png" type="Texture" id=6]
[ext_resource path="res://assets/stalls/stall_outline.png" type="Texture" id=7]
[ext_resource path="res://src/libraries/entities/cell_stamp.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="Stall" type="Node2D"]
script = ExtResource( 1 )
scene_key = "stall"

[node name="Sprite_StallOutline" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 7 )

[node name="Sprite_Stall" type="Sprite" parent="."]
texture = ExtResource( 6 )
vframes = 3

[node name="BusinessHours" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
visible = false
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label_StallName" type="Label" parent="Control/VBoxContainer"]
margin_right = 97.0
margin_bottom = 14.0
text = "<STALL_NAME>"
align = 1

[node name="Label_StallType" type="Label" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 32.0
text = "<STALL_TYPE>"
align = 1

[node name="Area2D" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="States" type="Node2D" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Vacant")

[node name="Vacant" type="Node2D" parent="States"]
script = ExtResource( 5 )

[node name="Open" type="Node2D" parent="States"]
script = ExtResource( 4 )

[node name="Queue" type="Node2D" parent="."]

[node name="QueuePosition" type="Node2D" parent="Queue"]
position = Vector2( 72, 16 )

[node name="Polygon2D" type="Polygon2D" parent="Queue/QueuePosition"]
color = Color( 0.329412, 0.0392157, 0.0392157, 0.419608 )
polygon = PoolVector2Array( -8, 0, 0, -8, 8, 0, 0, 8 )

[node name="cell_stamps" type="Node2D" parent="."]

[node name="cell_stamp_stall_01" type="Node2D" parent="cell_stamps"]
position = Vector2( -32, -32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_02" type="Node2D" parent="cell_stamps"]
position = Vector2( 0, -32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_03" type="Node2D" parent="cell_stamps"]
position = Vector2( 32, -32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_04" type="Node2D" parent="cell_stamps"]
position = Vector2( -32, 0 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_05" type="Node2D" parent="cell_stamps"]
position = Vector2( 32, 0 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_06" type="Node2D" parent="cell_stamps"]
position = Vector2( -32, 32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_07" type="Node2D" parent="cell_stamps"]
position = Vector2( 0, 32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_08" type="Node2D" parent="cell_stamps"]
position = Vector2( 32, 32 )
script = ExtResource( 8 )
tile_index = 1

[node name="cell_stamp_stall_front_nonav_01" type="Node2D" parent="cell_stamps"]
position = Vector2( 64, -32 )
script = ExtResource( 8 )
tile_index = 3

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ true ]]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ false ]]
